--- a/package.json
+++ b/package.json
@@ -9,11 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "^2.3.2",
     "next": "12.3.1",
+    "next-redux-wrapper": "^8.0.0",
+    "node-sass": "^7.0.3",
+    "normalize.css": "^8.0.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "sass": "^1.54.9",
+    "usehooks-ts": "^2.7.0"
   },
   "devDependencies": {
+    "@types/node": "^18.7.18",
+    "@types/react-redux": "^7.1.24",
+    "@types/redux": "^3.6.0",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.1"
   }
