--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
-    "sass": "^1.54.9",
-    "usehooks-ts": "^2.7.0"
+    "sass": "^1.54.9"
   },
   "devDependencies": {
     "@types/node": "^18.7.18",
