--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "export": "next export"
+    "export": "next export",
+    "postinstall": "node pi.js"
   },
   "dependencies": {
     "classnames": "^2.3.2",
+    "ethers": "^5.7.1",
     "next": "12.3.1",
     "next-redux-wrapper": "^8.0.0",
     "node-sass": "^7.0.3",
@@ -20,7 +22,10 @@
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
-    "sass": "^1.54.9"
+    "sass": "^1.54.9",
+    "use-wallet": "^0.13.6",
+    "wagmi": "^0.6.6",
+    "web3": "^1.8.0"
   },
   "devDependencies": {
     "@types/node": "^18.7.18",
