--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "export": "next export"
   },
   "dependencies": {
+    "@manahippo/aptos-wallet-adapter": "^1.0.2",
     "classnames": "^2.3.2",
     "ethers": "^5.7.1",
     "next": "12.3.1",
