--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "redux-devtools-extension": "^2.13.9",
     "sass": "^1.54.9",
     "swiper": "^8.4.4",
+    "use-sound": "^4.0.1",
     "wagmi": "^0.6.8",
     "web3": "^1.8.0"
   },
@@ -33,6 +34,8 @@
     "@types/react-redux": "^7.1.24",
     "@types/redux": "^3.6.0",
     "eslint": "8.23.1",
-    "eslint-config-next": "12.3.1"
+    "eslint-config-next": "12.3.1",
+    "file-loader": "^6.2.0",
+    "url-loader": "^4.1.1"
   }
 }
